# automatic-speech-recognition-service

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  main.py
backend/app/api/: deps.py  health.py  ops.py  schemas.py  transcribe.py  transcript.py
backend/app/core/: asr_client.py  breaker.py  db.py  logging.py  retry.py  semaphore.py
backend/app/deid/: __init__.py  labels.py  masking.py  teacher.py  train.py
backend/app/deid/artifacts/: config.json  metrics_hard_labels.json
backend/app/deidentification/: __init__.py  crf.py  eval.py  inference.py  losses.py  masking.py  model.py  teacher.py  train.py  viterbi.py
backend/app/models/: __init__.py  audit.py  chunk.py  enums.py  job.py
backend/app/workers/: main.py  process_chunk.py  queueing.py  reconciler.py  stitch_job.py
backend/scripts/: loadtest.py
backend/tests/deid/: test_crf_viterbi.py  test_datagen.py  test_inference.py  test_labels.py  test_losses.py  test_masking.py  test_model.py  test_teacher.py
backend/tests/e2e/: conftest.py  test_concurrency_proof.py  test_crash_recovery.py
backend/tests/integration/: conftest.py  test_api.py  test_ops.py  test_reconciler.py  test_semaphore_redis.py  test_stitch_deid.py  test_worker_failures.py  test_worker_happy_path.py
backend/tests/unit/: test_asr_client.py  test_breaker.py  test_cursor.py  test_retry.py  test_schemas.py  test_semaphore.py  test_stitcher.py
design/: DESIGN.md  (+7 more)
(+47 files in other folders)
