[project]
name = "asr-backend"
version = "0.1.0"
description = "Transcription service backend: FastAPI + arq workers + CIPHER de-identification"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0.32",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "arq>=0.26",
    "redis>=5.0",
    "httpx>=0.27",
    "torch>=2.4",
    "transformers>=4.44",
    "faker>=26",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "fakeredis[lua]>=2.24",
    "testcontainers[postgres]>=4.8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "real_deid: run stitch against the committed CIPHER student instead of the identity patch",
]

[tool.ruff]
line-length = 100
